Replace Skeleton with Bootstrap grid.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 		<script src="components/modernizr/modernizr.js"></script>
 	</head>
 	<body>
-		<!-- Add your site or application content here -->
 		<header>
 			<h1>Nebo Front-End Template</h1>
 		</header>
-		<div></div>
-		<footer></footer>
+		<div>
+			<div class="container">
+				<div class="row">
+				</div>
+			</div>
+		</div>
+		<footer>
+		</footer>
 
 		<script data-main="js/main.js" src="components/requirejs/require.js"></script>
 
