--- a/dev/index.html
+++ b/dev/index.html
@@ -26,11 +26,14 @@
     <footer>
     </footer>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+
 <!-- build:js js/site.js -->
     <script src="js/utils/console_fix.js"></script>
     <script src="js/nebo/dropdown.js"></script>
     <script src="js/events/nav_events.js"></script>
-    <script src="js/main"></script>
+    <script src="js/main.js"></script>
 <!-- endbuild -->
 
 
