--- a/dev/index.html
+++ b/dev/index.html
@@ -1,50 +1,8 @@
-<!DOCTYPE html>
-<!--[if IE 8]>      <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->  <html class="no-js"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <link rel="stylesheet" href="css/application.css">
-    <script src="components/modernizr/modernizr.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Nebo Front-End Template</h1>
-    </header>
+include "header.html"
     <div>
       <div class="container">
         <div class="row">
         </div>
       </div>
     </div>
-    <footer>
-    </footer>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-
-<!-- build:js js/site.js -->
-    <script src="js/utils/console_fix.js"></script>
-    <script src="js/nebo/dropdown.js"></script>
-    <script src="js/events/nav_events.js"></script>
-    <script src="js/main.js"></script>
-<!-- endbuild -->
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-  </body>
-</html>
+include "footer.html"
