--- a/dev/index.html
+++ b/dev/index.html
@@ -1,8 +1,8 @@
-include "header.html"
+@@include("header.html", {"defaultText": "Nebo Front-End Templates"})
     <div>
       <div class="container">
         <div class="row">
         </div>
       </div>
     </div>
-include "footer.html"
+@@include("footer.html")
