--- a/dev/index.html
+++ b/dev/index.html
@@ -2,6 +2,17 @@
     <div>
       <div class="container">
         <div class="row">
+        		<h4>Button with a hover and active state</h4>
+	<div class="myHoverActiveButton"></div>
+
+	<h4>Button with hover state</h4>
+	<div class="myHoverButton"></div>
+
+	<h4>Button with active state</h4>
+	<div class="myActiveButton"></div>
+
+	<h4>Button without a hover/active state</h4>
+	<div class="myBoringButton"></div>
         </div>
       </div>
     </div>
